common background properties extended

--- a/css/style.css
+++ b/css/style.css
@@ -44,43 +44,18 @@ table {
 a {
   text-decoration: none; }
 
-.hero {
-  /* The image used */
-  background-image: url("../img/miami-day.jpg");
-  /* Set a specific height */
+.hero, .room, .night {
   min-height: 700px;
-  /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover; }
 
-.room {
-  background-image: url("../img/room.jpg");
-  /* Set a specific height */
-  height: 700px;
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; }
+.hero {
+  background-image: url("../img/miami-day.jpg"); }
 
 .room {
-  background-image: url("../img/room.jpg");
-  /* Set a specific height */
-  height: 700px;
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; }
+  background-image: url("../img/room.jpg"); }
 
 .night {
-  background-image: url("../img/miami-night.jpeg");
-  /* Set a specific height */
-  height: 700px;
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; }
+  background-image: url("../img/miami-night.jpeg"); }
