--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,54 +1,25 @@
 @import 'reset';
 
-.hero{
-    /* The image used */
-    background-image: url("../img/miami-day.jpg");
-
-    /* Set a specific height */
+%background-img-common{
     min-height: 700px; 
 
-    /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.room{
-    background-image: url("../img/room.jpg");
-
-    /* Set a specific height */
-    height: 700px; 
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.hero{
+    background-image: url("../img/miami-day.jpg");
+    @extend %background-img-common;
 }
 
 .room{
     background-image: url("../img/room.jpg");
-
-    /* Set a specific height */
-    height: 700px; 
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    @extend %background-img-common;
 }
 
 .night{
     background-image: url("../img/miami-night.jpeg");
-
-    /* Set a specific height */
-    height: 700px; 
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    @extend %background-img-common;
 }
