--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,49 @@ a {
   background-repeat: no-repeat;
   background-size: cover; }
 
+body {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: "hero" "room" "night"; }
+
 .hero {
-  background-image: url("../img/miami-day.jpg"); }
+  background-image: url("../img/miami-day.jpg");
+  grid-area: hero; }
+  .hero .nav-cont {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: "logo . navi";
+    padding: 10px 100px;
+    border-bottom: 2px solid #C6BC98;
+    background-color: rgba(0, 0, 0, 0.15);
+    position: fixed;
+    width: 100%; }
+    .hero .nav-cont .logo {
+      grid-area: logo; }
+    .hero .nav-cont .main-nav {
+      grid-area: navi;
+      justify-self: start;
+      display: flex;
+      align-items: center;
+      justify-content: space-between; }
+      .hero .nav-cont .main-nav a {
+        display: inline-block;
+        margin-right: 90px;
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+        font-size: 1.5em;
+        letter-spacing: 1px; }
+      .hero .nav-cont .main-nav a:hover {
+        color: black;
+        opacity: 0.7; }
 
 .room {
-  background-image: url("../img/room.jpg"); }
+  background-image: url("../img/room.jpg");
+  grid-area: room; }
 
 .night {
-  background-image: url("../img/miami-night.jpeg"); }
+  background-image: url("../img/miami-night.jpeg");
+  grid-area: night; }
