--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a {
   text-decoration: none; }
 
 .hero, .room, .night {
-  min-height: 700px;
+  opacity: .9;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -55,10 +55,11 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
-  grid-template-areas: "hero" "room" "night"; }
+  grid-template-areas: "hero" "info1" "room" "info2" "night"; }
 
 .hero {
   background-image: url("../img/miami-day.jpg");
+  min-height: 100%;
   grid-area: hero; }
   .hero .nav-cont {
     display: grid;
@@ -66,18 +67,22 @@ body {
     grid-template-rows: auto;
     grid-template-areas: "logo . navi";
     padding: 10px 100px;
-    border-bottom: 2px solid #C6BC98;
-    background-color: rgba(0, 0, 0, 0.15);
-    position: fixed;
-    width: 100%; }
+    border-bottom: 3px solid #C6BC98;
+    background-color: rgba(0, 0, 0, 0.35); }
     .hero .nav-cont .logo {
-      grid-area: logo; }
+      grid-area: logo;
+      display: flex;
+      align-items: center; }
+      .hero .nav-cont .logo span {
+        font-size: 2em;
+        padding-left: 10px;
+        font-weight: bold;
+        color: white; }
     .hero .nav-cont .main-nav {
       grid-area: navi;
       justify-self: start;
       display: flex;
-      align-items: center;
-      justify-content: space-between; }
+      align-items: center; }
       .hero .nav-cont .main-nav a {
         display: inline-block;
         margin-right: 90px;
@@ -89,11 +94,72 @@ body {
       .hero .nav-cont .main-nav a:hover {
         color: black;
         opacity: 0.7; }
+  .hero .hero-cont {
+    text-align: center;
+    padding: 0 300px;
+    padding-top: 300px; }
+    .hero .hero-cont h1 {
+      color: white;
+      font-size: 3.5em;
+      font-weight: bold;
+      margin-bottom: 30px; }
+    .hero .hero-cont p {
+      color: white;
+      font-size: 1.5em;
+      margin-bottom: 200px; }
+    .hero .hero-cont a {
+      color: white;
+      text-transform: uppercase;
+      font-size: 1.1em;
+      opacity: 0.95;
+      display: inline-block;
+      border-radius: 2.5px;
+      background: #e61c26;
+      font-weight: 600;
+      padding: 15px 40px;
+      margin-bottom: 250px; }
+    .hero .hero-cont a:hover {
+      color: #e61c26;
+      background: white;
+      opacity: 1; }
+
+.info1 {
+  background-color: #f1efef;
+  padding: 70px 250px;
+  height: 200px;
+  text-align: center; }
+  .info1 h2 {
+    font-size: 2.5em;
+    color: #2d852a;
+    font-weight: bold;
+    letter-spacing: 0.05em;
+    margin-bottom: 25px; }
+  .info1 p {
+    line-height: 1.2;
+    font-size: 1.25em; }
 
 .room {
+  grid-area: room;
   background-image: url("../img/room.jpg");
-  grid-area: room; }
+  height: 700px; }
+
+.info2 {
+  grid-area: info2;
+  background-color: #f1efef;
+  padding: 70px 250px;
+  height: 200px;
+  text-align: center; }
+  .info2 h2 {
+    font-size: 2.5em;
+    color: #2d852a;
+    font-weight: bold;
+    letter-spacing: 0.05em;
+    margin-bottom: 25px; }
+  .info2 p {
+    line-height: 1.2;
+    font-size: 1.25em; }
 
 .night {
+  grid-area: night;
   background-image: url("../img/miami-night.jpeg");
-  grid-area: night; }
+  height: 700px; }
