--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,9 +52,6 @@ body{
             }
         }
         
-
-        
-
         .main-nav{
             a{
                 display: inline-block;
@@ -64,10 +61,10 @@ body{
                 font-weight: bold;
                 font-size: 1.5em;
                 letter-spacing: 1px;
-            }
-            a:hover{
-                color: black;
-                opacity: 0.7;
+                &:hover{
+                    color: black;
+                    opacity: 0.7;
+                }
             }
             grid-area: navi;
             justify-self: start;
@@ -105,11 +102,11 @@ body{
             font-weight: 600;   
             padding: 15px 40px;
             margin-bottom: 250px; 
-        }
-        a:hover{
-            color: rgb(230, 28, 38);
-            background: white;
-            opacity: 1;
+            &:hover{
+                color: rgb(230, 28, 38);
+                background: white;
+                opacity: 1;
+            }
         }
     }
 
@@ -183,6 +180,5 @@ footer{
         color: white;
         font-size: 3em;
         padding-top: 125px;
-
     }
 }
